--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@iconify/react": "^4.1.1",
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@paypal/react-paypal-js": "^8.1.3",
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -64,7 +64,6 @@
     "postcss": "^8.4.33",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.9.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-calendly": "^4.3.0",
@@ -99,6 +98,7 @@
     "@types/node": "^20",
     "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/react": "^18.2.39",
-    "@types/react-dom": "^18.2.17"
+    "@types/react-dom": "^18.2.17",
+    "prisma": "^5.12.1"
   }
 }
