--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-calendly": "^4.3.0",
     "react-confetti": "^6.1.0",
     "react-countup": "^6.5.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
