--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-quill": "^2.0.0",
     "recharts": "^2.9.0",
     "sharp": "^0.33.2",
+    "slugify": "^1.6.6",
     "stripe": "^13.10.0",
     "swr": "^2.2.4",
     "tailwind-merge": "^1.14.0",
