--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^8",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.0.0",
+    "file-saver": "^2.0.5",
     "jest": "^29.7.0",
     "lucide-react": "^0.286.0",
     "media-icons": "^1.0.0",
@@ -78,6 +79,7 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4",
     "zustand": "^4.4.3"
   },
