--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-prettier": "^9.0.0",
     "googleapis": "^144.0.0",
     "file-saver": "^2.0.5",
+    "googleapis": "^144.0.0",
     "jest": "^29.7.0",
     "lucide-react": "^0.286.0",
     "media-icons": "^1.0.0",
