--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^8",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.0.0",
+    "googleapis": "^144.0.0",
     "file-saver": "^2.0.5",
     "jest": "^29.7.0",
     "lucide-react": "^0.286.0",
