--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,10 @@ commands:
             bash scripts/create_env_file.sh
 
 jobs:
-  test_events:
+  test_pes_template:
     machine:
       image: ubuntu-2204:2024.05.1
-    working_directory: ~/events
+    working_directory: ~/pes-template
     steps:
       - checkout
       - setup_env_file
@@ -42,7 +42,7 @@ jobs:
   push_service_image:
     machine:
       image: ubuntu-2204:2024.05.1
-    working_directory: ~/events
+    working_directory: ~/pes-template
     steps:
       - checkout
       - install_rok8s_scripts
@@ -70,15 +70,15 @@ jobs:
       - checkout
       - cloudrun/init
       - cloudrun/deploy:
-          image: "gcr.io/${GOOGLE_PROJECT_ID}/events:${CIRCLE_SHA1}"
+          image: "gcr.io/${GOOGLE_PROJECT_ID}/pes-template:${CIRCLE_SHA1}"
           platform: managed
           region: us-east1
-          service-name: events-<< parameters.environment >>
+          service-name: pes-template-<< parameters.environment >>
           unauthenticated: true
           args: --service-account=<< parameters.service-account-name >>
 
 workflows:
-  events:
+  pes-template:
     jobs:
       - push_service_image
       - deploy_service_cloud_run:
