--- a/deploy/build.config
+++ b/deploy/build.config
@@ -1,7 +1,7 @@
 DOCKERFILE=('Dockerfile.prod')
 ROK8S_DOCKER_BUILD_EXTRAARGS=("")
 EXTERNAL_REGISTRY_BASE_DOMAIN=("gcr.io/${GCP_PROJECT}")
-REPOSITORY_NAME="events"
+REPOSITORY_NAME="pes-template"
 DOCKERTAG=("${EXTERNAL_REGISTRY_BASE_DOMAIN}/${REPOSITORY_NAME}")
 CI_SHA1=("${CIRCLE_SHA1}")
 CI_BUILD_NUM=("${CIRCLE_BUILD_NUM}")
