--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emailjs/browser": "^3.12.1",
     "@google-cloud/storage": "^7.6.0",
     "@gsap/react": "^2.1.0",
+    "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.3.2",
     "@iconify/react": "^4.1.1",
     "@prisma/client": "^5.12.1",
@@ -22,12 +23,15 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.10.7",
@@ -43,7 +47,6 @@
     "eslint": "^8",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.0.0",
-    "googleapis": "^144.0.0",
     "file-saver": "^2.0.5",
     "googleapis": "^144.0.0",
     "jest": "^29.7.0",
